added some background color

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row d-flex bg-secondary bg-gradient align-items-center justify-content-center p-5">
+                        <div
+                            class="row d-flex Panda-bg-secondary bg-gradient align-items-center justify-content-center p-5">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -73,7 +74,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex bg-secondary bg-gradient align-items-center justify-content-center p-5">
+                        <div
+                            class="row d-flex Panda-bg-secondary bg-gradient align-items-center justify-content-center p-5">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
@@ -88,7 +90,8 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex bg-secondary bg-gradient align-items-center justify-content-center p-5">
+                        <div
+                            class="row d-flex Panda-bg-secondary bg-gradient align-items-center justify-content-center p-5">
                             <div class="col-lg-7">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in front
@@ -232,7 +235,7 @@
                 </div>
             </div>
         </section>
-        <section class="container p-3 my-5 bg-secondary d-flex align-items-center justify-content-center">
+        <section class="container p-3 my-5 Panda-bg-secondary d-flex align-items-center justify-content-center">
             <div>
                 <h1>LET'S STAY IN TOUCHs</h1>
                 <p>Get updates on sales, specials and more</p>
