--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="ps-5 navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="fixed-top ps-5 navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </nav>
-        <section class="container p-5 rounded">
+        <section id="Home" class="container p-5 rounded">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -151,7 +151,7 @@
             </div>
         </section>
         <!-- Shoes Section -->
-        <section class="container">
+        <section class="container" id="Shoes">
             <h2>Shoes</h2>
             <div class="row">
                 <div class="col-lg-4">
@@ -194,7 +194,7 @@
             </div>
         </section>
         <!-- BackPack Section -->
-        <section class="container">
+        <section class="container" id="BackPack">
             <h2>BackPack</h2>
             <div class="row">
                 <div class="col-lg-4">
@@ -213,7 +213,7 @@
                     <div class="card border-0 shadow-lg p-3 mb-5 bg-body rounded" style="width: 18rem;">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Nike 360</h5>
+                            <h5 class="card-title">Blue Niltu Bag</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                             <h5>$320</h5>
@@ -225,9 +225,10 @@
                     <div class="card border-0 shadow-lg p-3 bg-body rounded" style="width: 18rem;">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Red Airmax</h5>
+                            <h5 class="card-title">Black Kaltu Bag</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional.</p>
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
                             <h5>$350</h5>
                             <a href="#" class="btn btn-danger">Buy Now >></a>
                         </div>
@@ -235,7 +236,8 @@
                 </div>
             </div>
         </section>
-        <section class="container p-3 my-5 Panda-bg-secondary d-flex align-items-center justify-content-center">
+        <section id="Subscribe"
+            class="container p-3 my-5 Panda-bg-secondary d-flex align-items-center justify-content-center">
             <div>
                 <h1>LET'S STAY IN TOUCHs</h1>
                 <p>Get updates on sales, specials and more</p>
