--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="carousel-item active">
                         <div
                             class="row d-flex Panda-bg-secondary bg-gradient align-items-center justify-content-center p-5">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-12">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front
@@ -68,7 +68,7 @@
                                 <h2>$420</h2>
                                 <button class="btn text-white btn-danger">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                     <div class="carousel-item">
                         <div
                             class="row d-flex Panda-bg-secondary bg-gradient align-items-center justify-content-center p-5">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-12">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.
@@ -84,7 +84,7 @@
                                 <h2>$1200</h2>
                                 <button class="btn text-white btn-danger">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                     <div class="carousel-item">
                         <div
                             class="row d-flex Panda-bg-secondary bg-gradient align-items-center justify-content-center p-5">
-                            <div class="col-lg-7">
+                            <div class="col-lg-7 col-12">
                                 <h1>X-Box for your living room</h1>
                                 <p>This is the best x-box in the world for people who just want to waste time in front
                                     of
@@ -101,7 +101,7 @@
                                 <h2>$600</h2>
                                 <button class="btn text-white btn-danger">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
@@ -124,7 +124,7 @@
         <!-- Catagories -->
         <section class="container p-5">
             <div class="row p-3">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="bg-warning border rounded-3 d-flex align-items-center justify-content-between p-3">
                         <h3 class="text-white">
                             Watch
@@ -132,7 +132,7 @@
                         <img width="70px" src="images/categories/watch.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="bg-info border rounded-3 d-flex align-items-center justify-content-between p-3">
                         <h3 class="text-white">
                             Bag
@@ -140,7 +140,7 @@
                         <img width="70px" src="images/categories/bag.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="border rounded-3 bg-primary d-flex align-items-center justify-content-between p-3">
                         <h3 class="text-white">
                             Shoes
@@ -154,7 +154,7 @@
         <section class="container" id="Shoes">
             <h2>Shoes</h2>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0 shadow-lg p-3 mb-5 bg-body rounded" style="width: 18rem;">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0 shadow-lg p-3 mb-5 bg-body rounded" style="width: 18rem;">
                         <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0 shadow-lg p-3 bg-body rounded" style="width: 18rem;">
                         <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -197,7 +197,7 @@
         <section class="container" id="BackPack">
             <h2>BackPack</h2>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0 shadow-lg p-3 mb-5 bg-body rounded" style="width: 18rem;">
                         <img width="290px" src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0 shadow-lg p-3 mb-5 bg-body rounded" style="width: 18rem;">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -221,7 +221,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0 shadow-lg p-3 bg-body rounded" style="width: 18rem;">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -248,7 +248,7 @@
         </section>
     </main>
     <footer class="mt-5 text-center">
-        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+        <p><small>©2021. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
