--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="fixed-top ps-5 navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="fixed-top ps-5 mb-5 navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" alt="">
